# ObjectTalk

./: .gitignore  APKBUILD  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  Dockerfile  LICENSE  Makefile  Makefile.old  OtClasses.cpp  OtClasses.h  OtClassesCollections.h  OtClassesIO.h  OtClassesPrimitives.h  OtException.h  OtFormat.h  OtInternal.h  OtNucleus.h  OtObjectTalk.h  OtScanner.h  OtSequence.h  README.md  TODO.md  main.cpp  t.txt
app/: CMakeLists.txt  main.cpp  ot.cpp
audio/: CMakeLists.txt
audio/audio/: OtAudio.cpp  OtAudio.h  OtAudioAsset.h  OtCircuit.cpp  OtCircuit.h  OtCircuitControl.h  OtCircuitFactory.h  OtCircuitPin.cpp  OtCircuitPin.h  OtCircuitUtils.cpp  OtCircuitUtils.h  OtWire.cpp  OtWire.h
audio/bindings/: OtAudioModule.cpp  OtAudioModule.h  OtSoundModule.cpp  OtSoundModule.h
audio/circuits/: OtAutoWah.cpp  OtChorus.cpp  OtCompressor.cpp  OtEnvelope.cpp  OtEnvelopeGenerator.cpp  OtEq.cpp  OtFlanger.cpp  OtFuzzFace.cpp  OtGraphicEQ.cpp  OtKeyboardInput.cpp  OtLadder.cpp  OtLfo.cpp  OtMeterBridge.cpp  OtMidiInput.cpp  OtMidiProbe.cpp  OtMixer4.cpp  OtMonoToStereo.cpp  OtMonophonicSampler.cpp  OtNeuralModeler.cpp  OtNoise.cpp  OtParametricEQ.cpp  OtPhaser.cpp  OtPolyphonicSampler.cpp  OtPolyphonicSynth.cpp  OtPowerAmp.cpp  OtReverb.cpp  OtSampleInput.cpp  OtSamplerOsc.cpp  OtScope.cpp  OtSpeakerCabinet.cpp  OtSpeakerOut.cpp  OtSpectrum.cpp  OtToneStack.cpp  OtTransposer.cpp  OtTremolo.cpp  OtTubePower.cpp  OtTubePre.cpp  OtTubePre12AX7.cpp  OtTubeScreamer.cpp  OtTuner.cpp  (+8 more)
audio/components/: OtAudioFilter.cpp  OtAudioFilter.h  OtEnvelope.cpp  OtEnvelope.h  OtMidi.cpp  OtMidi.h  OtOscillator.cpp  OtOscillator.h  OtSynth.cpp  OtSynth.h  OtVoice.cpp  OtVoice.h
audio/core/: OtAudio.cpp  OtAudio.h  OtAudioAsset.h  OtCircuit.cpp  OtCircuit.h  OtCircuitControl.h  OtCircuitFactory.h  OtCircuitPin.cpp  OtCircuitPin.h  OtCircuitUtils.cpp  OtCircuitUtils.h  OtDsp.cpp  OtDsp.h  OtMixer.cpp  OtMixer.h  OtMixerInput.cpp  OtMixerInput.h  OtSound.cpp  OtSound.h  OtWire.cpp  OtWire.h
audio/engine/: OtDsp.cpp  OtDsp.h  OtMixer.cpp  OtMixer.h  OtSound.cpp  OtSound.h
audio/faust/: Build.py  OtAdsr.h  OtAudioNoise.h  OtAutoWah.h  OtCabinetIR.cpp  OtCabinetIR.h  OtChorus.h  OtCompressor.h  OtEq.h  OtFaust.cpp  OtFaust.h  OtFlanger.h  OtFuzzFace.h  OtGraphicEQ.h  OtLadder.h  OtLfo.h  OtLfoDsp.h  OtNoise.h  OtOsc.h  OtParametricEQ.h  OtPhaser.h  OtPowerAmp.h  OtPushPull6L6.h  OtPushPullEL34.h  OtPushPullEL84.h  OtReverb.h  OtSingleEnded6V6.h  OtSingleEndedEL84.h  OtToneStackAmpeg.h  OtToneStackBogner.h  OtToneStackFender.h  OtToneStackIbanez.h  OtToneStackMarshall.h  OtToneStackMesa.h  OtToneStackPeavey.h  OtToneStackRoland.h  OtToneStackSoldano.h  OtToneStackVox.h  OtTremolo.h  OtTs9.cpp  (+13 more)
audio/formats/: OtMidiFile.cpp  OtMidiFile.h  OtMidiFileAsset.h  OtMidiMessage.h  OtNeuralAudioModel.cpp  OtNeuralAudioModel.h  OtNeuralAudioModelAsset.h  OtOneShotFile.cpp  OtOneShotFile.h  OtOneShotFileAsset.h  OtSampleFile.cpp  OtSampleFile.h  OtSampleFileAsset.h  OtSamplerSound.cpp  OtSamplerSound.h  OtSamplerSoundAsset.h  OtWaveTable.cpp  OtWaveTable.h  OtWaveTableAsset.h
audio/synthesizer/: OtOneShotSound.cpp  OtOneShotSound.h  OtOneShotVoice.h  OtSynth.cpp  OtSynth.h  OtSynthSound.cpp  OtSynthSound.h  OtSynthSoundFactory.h  OtSynthVoice.h
audio/synths/: OtAnalogSynth.cpp  OtAnalogSynth.h  OtAnalogVoice.cpp  OtAnalogVoice.h  OtSamplerSynth.cpp  OtSamplerSynth.h  OtSamplerVoice.cpp  OtSamplerVoice.h
audio/ui/: OtAdsrUi.cpp  OtAdsrUi.h  OtAudioUi.h  OtLfoUi.cpp  OtLfoUi.h  OtOscUi.cpp  OtOscUi.h  OtVcoUi.cpp  OtVcoUi.h
audio/utilities/: OtAudioBuffer.h  OtAudioSettings.h  OtAudioUi.cpp  OtAudioUi.h  OtAudioUtilities.h  OtCircularBuffer.h  OtDelay.h  OtEnvelope.h  OtFft.h  OtHammingWindow.h  OtMidiBuffer.h  OtMidiFile.h  OtMidiMessage.h  OtOscillator.cpp  OtOscillator.h  OtPitchYin.h  OtSampleBuffer.h  OtSignalBuffer.h  OtSignalQueue.h  OtSmoothValue.h  OtVirtualAnalogFilter.h  OtWaveTable.cpp  OtWaveTable.h  OtWaveTableAsset.h
geo/: CMakeLists.txt
geo/bindings/: OtWorldModule.cpp
geo/erosion/: OtErosion.cpp  OtErosion.h  OtErosion2.cpp  OtErosion2.h
geo/map/: OtLatLon.h  OtMapImageTile.cpp  OtMapImageTile.h  OtMapLayer.h  OtMapRaster.h  OtMapTile.h  OtSlippyMap.cpp  OtTileLayer.cpp  OtTileLayer.h
geo/utility/: OtErosion.cpp  OtErosion.h  OtHeightMap.cpp  OtHeightMap.h  OtHeightMapAsset.h  OtMap.cpp  OtMap.h
geo/world/: OtWorld.cpp  OtWorld.h  OtWorldAsset.h  OtWorldGenerator.cpp  OtWorldGenerator.h  OtWorldLayer.h  OtWorldTile.h  OtWorldTileCache.h  OtWorldTileID.h
gfx/: CMakeLists.txt
gfx/animation/: OtAnimation.cpp  OtAnimation.h  OtAnimator.h
gfx/assets/: OtAsset.cpp  OtAsset.h  OtAssetBase.cpp  OtAssetBase.h  OtAssetFactory.h  OtAssetManager.cpp  OtAssetManager.h  (+24 more)
graph/: CMakeLists.txt
gui/: CMakeLists.txt  README.md  guimodule.cpp  guimodule.h
http/: CMakeLists.txt  OtHttp.cpp  OtHttp.h  OtHttpHeaders.h  OtHttpNext.h  OtHttpNotFound.h  OtHttpRequest.cpp  OtHttpRequest.h  OtHttpResponse.cpp  OtHttpResponse.h  OtHttpRouter.cpp  OtHttpRouter.h  OtHttpServer.cpp  OtHttpServer.h  OtHttpSession.cpp  OtHttpSession.h  OtHttpTimer.h  OtMimeTypes.cpp  OtMimeTypes.h  OtURL.cpp  OtURL.h
ide/: CMakeLists.txt  OtConsole.cpp  OtConsole.h  OtEditor.cpp  OtEditor.h  OtIde.cpp  OtIde.h  OtIdeEvents.h  OtIdeLanguage.cpp  OtIdeLanguage.h  OtIdeUi.h  OtLogo.cpp  OtLogo.h  OtObjectTalkEditor.cpp  OtObjectTalkEditor.h  OtObjectTalkLanguage.cpp  OtObjectTalkLanguage.h  OtSceneEditor.cpp  OtSceneEditor.h  OtScriptRunner.cpp  OtScriptRunner.h  OtWorkspace.cpp  OtWorkspace.h  console.cpp  console.h  editor.cpp  editor.h  ide.cpp  ide.h  ideevents.h  language.cpp  language.h  workspace.cpp  workspace.h
language/: CMakeLists.txt
libot/: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
network/: CMakeLists.txt
nodes/: CMakeLists.txt
ot/: CMakeLists.txt
physics/: CMakeLists.txt
scene/: CMakeLists.txt
shaders/: CMakeLists.txt  OtShaderHeader.h  OtShaders.cpp  OtShaders.h  bindings.txt  update  update.bat
stage/: CMakeLists.txt
(+4062 files in other folders)
